--- a/style.css
+++ b/style.css
@@ -77,4 +77,11 @@ button{
     height: 65px;
     border: 0;
     border-radius: 10px;
+    cursor: pointer;
+}
+
+button:hover{
+    transform: translateY(-5px);
+    transition: 0.5s;
+    box-shadow: 0px 10px 15px #0d0f0f69;
 }
